Attempt to fix white space issue on mobile view

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -8,6 +8,10 @@
 html {
   box-sizing: border-box;
   min-width: 320px;
+}
+
+body, html {
+  width: 100%;
   overflow-x: hidden !important;
 }
 
@@ -44,7 +48,6 @@ a {
 // Prevents scrollbar from overlapping content for MSIE and hide overflow on the x axis.
 body {
   -ms-overflow-style: scrollbar;
-  overflow-x: hidden !important;
   overflow-y: auto;
   background-color: rgba(0,0,0,1);
   color: rgba(255, 255, 255, 0.8);
